<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#252525"
    tools:context="teamawesome.alertme.TimeFrame">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_frame_check"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/uno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <CheckBox
                android:id="@+id/weekend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultValue="false"
                android:layout_marginRight="50dp"
                android:text="@string/time_frame_weekend"
                android:textColor="#d0d0d0" />

            <CheckBox
                android:id="@+id/weekday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultValue="true"
                android:text="@string/time_frame_week"
                android:textColor="#d0d0d0" />
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
        <LinearLayout
            android:id="@+id/dos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/Monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="weekdayChecked"
                android:text="LUNES"
                android:textOff="LUNES"
                android:textOn="LUNES"
                android:textSize="10dp" />

            <ToggleButton
                android:id="@+id/Tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="weekdayChecked"
                android:text="MARTES"
                android:textOff="MARTES"
                android:textOn="MARTES"
                android:textSize="10dp" />

            <ToggleButton
                android:id="@+id/Wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="weekdayChecked"
                android:text="MIERCOLES"
                android:textOff="MIERCOLES"
                android:textOn="MIERCOLES"
                android:textSize="10dp" />

            <ToggleButton
                android:id="@+id/Thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="weekdayChecked"
                android:text="JUEVES"
                android:textOff="JUEVES"
                android:textOn="JUEVES"
                android:textSize="10dp" />

            <ToggleButton
                android:id="@+id/Friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="weekdayChecked"
                android:text="VIERNES"
                android:textOff="VIERNES"
                android:textOn="VIERNES"
                android:textSize="10dp" />

            <ToggleButton
                android:id="@+id/Saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="weekdayChecked"
                android:text="SABADO"
                android:textOff="SABADO"
                android:textOn="SABADO"
                android:textSize="10dp" />

            <ToggleButton
                android:id="@+id/Sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="weekdayChecked"
                android:text="DOMINGO"
                android:textOff="DOMINGO"
                android:textOn="DOMINGO"
                android:textSize="10dp" />
        </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/tres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_frame"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="36sp"
                android:layout_height="36sp"
                android:background="@null"
                android:onClick="showInfo"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/info_icon" />

            <Switch
                android:id="@+id/daySpanSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:showText="true"
                android:textOff="12"
                android:textOn="24" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_time"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/cuatro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seekBarTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#d0d0d0" />

            <TextView
                android:id="@+id/timeDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="63dp"
                android:textColor="#d0d0d0"
                android:textSize="30dp" />

            <Button
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Obtener tiempo"/>
        </LinearLayout>

       <!-- <LinearLayout
            android:id="@+id/cinco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:showText="true"
                android:textColor="#d0d0d0"
                android:textOff="Off"
                android:textOn="On"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrate"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"/>


        </LinearLayout>

-->        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="100dp"
            android:onClick="toAlarmList"
            android:text="@string/time_frame_submit" />


    </LinearLayout>


</RelativeLayout>
